<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:gravity="right"
            android:textSize="16sp"
            android:text="@string/operbillCode"/>
        <EditText
            android:id="@+id/operbillCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:layout_marginLeft="10sp"
            android:singleLine="true"
            android:padding="5dp"
            android:enabled="false"/>
    </TableRow>
    <TableRow
        android:id="@+id/borrow"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:gravity="right"
            android:textSize="16sp"
            android:text="@string/borrowPeople"/>
        <EditText
            android:id="@+id/borrowPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:singleLine="true"
            android:layout_marginLeft="10sp"
            android:padding="5dp"
            android:focusable="false"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:gravity="right"
            android:textSize="16sp"
            android:text="@string/examinePeople"/>
        <EditText
            android:id="@+id/examinePeople"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:singleLine="true"
            android:enabled="false"
            android:padding="5dp"
            android:textColor="@color/textColor" />
    </TableRow>
    <TableRow android:id="@+id/setDate">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:gravity="right"
            android:textSize="16sp"
            android:text="@string/examineDate"/>
        <EditText
            android:id="@+id/examineDate"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/textColor"
            android:layout_marginLeft="10sp"
            android:singleLine="true"
            android:padding="5dp"
            android:enabled="false"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:gravity="right"
            android:textSize="16sp"
            android:text="@string/reviewPeople"/>
        <!--<EditText
            android:id="@+id/reviewPeople"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>-->
        <Spinner
            android:id="@+id/reviewPeople"
            android:layout_marginLeft="10sp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </TableRow>
    <TableRow android:id="@+id/setNote">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:gravity="right"
            android:textSize="16sp"
            android:text="@string/examineNote"/>
        <EditText
            android:id="@+id/examineNote"
            android:layout_width="200sp"
            android:layout_marginLeft="10sp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </TableRow>

</TableLayout>