<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/titleLayout" layout="@layout/layout_title"/>

    <TableLayout
        android:id="@+id/borrowCon"
        android:layout_below="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bottomColor"
        android:padding="8sp">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_span="2"
                android:textSize="16sp"
                android:text="@string/borrowCode" />
            <EditText
                android:id="@+id/borrowCode"
                android:layout_span="2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/textColor"
                android:layout_marginLeft="10sp"
                android:padding="5dp"
                android:focusable="false"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="16sp"
                android:layout_span="2"
                android:text="@string/borrowPeople" />
            <EditText
                android:id="@+id/borrowPeople"
                android:layout_span="2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/textColor"
                android:layout_marginLeft="10sp"
                android:padding="5dp"
                android:focusable="false"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="16sp"
                android:layout_span="2"
                android:text="@string/borrowDate"/>
            <EditText
                android:id="@+id/borrowDate"
                android:layout_span="2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/textColor"
                android:layout_marginLeft="10sp"
                android:padding="5dp"
                android:focusable="false"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_marginLeft="15sp"
                android:gravity="right"
                android:text="*" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/borrowDays"/>
            <EditText
                android:id="@+id/borrowDays"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:layout_marginLeft="10sp"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/daysUnit"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_span="2"
                android:gravity="right"
                android:text="@string/borrowInfo"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/borrowInfo"
                android:layout_span="2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/textColor"
                android:layout_marginLeft="10sp"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:padding="5dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_span="2"
                android:gravity="right"
                android:textSize="16sp"
                android:text="@string/operNote"/>
            <EditText
                android:id="@+id/operNote"
                android:layout_span="2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/textColor"
                android:layout_marginLeft="10sp"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"/>
        </TableRow>
    </TableLayout>
    <!--android:layout_marginBottom="10dp"-->
    <View
        android:id="@+id/line"
        android:layout_below="@+id/borrowCon"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/textColor"/>

    <ListView
        android:id="@+id/borrowAsset"
        android:layout_below="@+id/line"
        android:layout_above="@+id/menu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

    <include
        android:id="@+id/menu"
        layout="@layout/layout_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
