<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bottomColor">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/list_seperator"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addAsset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:clickable="true"
            android:textColor="@color/textColor"
            android:text="@string/addAsset"/>

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/list_seperator"/>

        <TextView
            android:id="@+id/scanAsset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:clickable="true"
            android:textColor="@color/textColor"
            android:text="@string/scanAsset"/>

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/list_seperator"/>

        <TextView
            android:id="@+id/delAsset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="16sp"
            android:clickable="true"
            android:textColor="@color/textColor"
            android:text="@string/delAsset"/>

    </LinearLayout>
</LinearLayout>
